Fixed windows horizontal page jump issues

--- a/static/base.css
+++ b/static/base.css
@@ -31,6 +31,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     padding: 0 1rem;
     color: var(--grey-800);
+    overflow-y: scroll;
 }
 
 main {
